finally actually fix stupid overflow issue

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -28,7 +28,7 @@
 body {
   width: 100%;
   min-height: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +62,7 @@ main {
   align-items: center;
   flex-direction: column;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 2rem;
+  padding: 2rem;
   gap: 2rem;
 }
 
@@ -146,10 +146,4 @@ a {
 a:focus, a:focus-visible {
   outline: 3px solid var(--focus-outline);
   outline-offset: 3px;
-}
-
-@media (max-width: 800px) or (max-height: 900px) {
-  body {
-    align-items: flex-start;
-  }
 }
